generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Restaurant {
  id Int @id @default(autoincrement())
  name String 
  location String
  description String
  stars Int
  rating Float
  available_tables Int
  allowPets Boolean
  parking Boolean
  tables Table[]
  reservations Reservation[]
}

model Table {
  id Int @id @default(autoincrement())
  number Int
  max_capacity Int
  available Boolean
  reservedOn DateTime?
  availableFrom DateTime
  restaurantId Int
  restaurant Restaurant @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  allowPets Boolean
  offersParkingSpot Boolean
  fee Float
  reservations Reservation[]
}

model Reservation {
  id Int @id @default(autoincrement())
  userId Int
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  restaurantId Int
  restaurant Restaurant @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  tableId Int
  table Table @relation(fields: [tableId], references: [id], onDelete: Cascade)
  number_of_people Int
  hasPets Boolean
  needParkingSpot Boolean
  reservationEndDate DateTime
  fee Float
}

model User {
  id Int @id @default(autoincrement())
  name String 
  email String @unique 
  password String 
  role Role @default(USER)
  reservations Reservation[]
}

enum Role {
  USER
  ADMIN
}